# Semestralka-POS

./: CMakeLists.txt  chodec.c  chodec.h  svet.c  svet.h
.cache/clangd/index/: chodec.c.6D4F11CBC69B63B1.idx  chodec.h.50F9CA21BFFABD1B.idx  klient.c.731DDC23349D9850.idx  server.c.2A44401A49F295FB.idx  svet.c.35101CDCBF2CC598.idx  svet.h.A370F7E95EB54B1B.idx
UML/: diagramUML.puml
client_server/: CMakeLists.txt  klient.c
zdrojove_kody/: CMakeLists.txt  UI.h  simulacia.c  simulacia.h  svet.c  svet.h
